# rust-learning

./: .env.example  .gitignore  Cargo.toml  LOCAL_DEVELOPMENT.md  README.md  mkdocs.local.yml  mkdocs.yml  requirements.txt  rust-toolchain.toml  serve-local.sh  test-deployment.sh
.github/workflows/: gh-pages.yml
content/: README.md
content/stage1-basics/: 12-learning-resources.md  README.md
content/stage1-basics/01-environment/: 01-installation.md  02-dev-tools.md  03-hello-world.md  04-cargo-basics.md
content/stage1-basics/02-syntax/: 01-variables.md  02-data-types.md  03-functions.md  04-comments.md
content/stage1-basics/03-control-flow/: 01-conditionals.md  02-loops.md  03-pattern-matching.md
content/stage1-basics/04-ownership-intro/: 01-ownership-basics.md  02-references-borrowing.md  03-slices.md  04-lifetimes.md
content/stage1-basics/05-comparisons/: 01-rust-vs-cpp.md
content/stage1-basics/06-structs-enums/: 01-struct-definition.md  02-methods-associated-functions.md  03-enum-definition.md  04-pattern-matching.md  05-advanced-features.md  README.md
content/stage1-basics/07-collections/: 01-vectors.md  02-hashmaps.md  03-other-collections.md  README.md
content/stage1-basics/08-error-handling/: 01-panic-unrecoverable.md  02-result-recoverable.md  03-advanced-error-handling.md  README.md
content/stage1-basics/09-generics-traits/: 01-generics-basics.md  02-traits.md  03-lifetimes.md  README.md
content/stage1-basics/10-advanced-error-handling/: 01-custom-error-types.md  02-error-handling-libraries.md  03-error-propagation-recovery.md  README.md
content/stage1-basics/11-module-system/: 01-module-basics.md  02-cargo-package-management.md  03-workspace-multi-package.md  README.md
content/stage2-ownership/: 01-ownership-concepts.md  02-borrowing-and-references.md  03-slices.md
content/stage3-advanced-concepts/: 01-structs.md  02-enums.md  03-error-handling.md
content/stage4-ecosystem/: 01-cargo-and-crates.md  02-common-libraries.md  03-web-frameworks.md
content/stage5-projects/: 01-axum-web-app.md  02-system-programming-cli.md  03-blockchain-demo.md
docs/rust-learning-plan/: ACCEPTANCE_rust-learning-plan.md  ALIGNMENT_rust-learning-plan.md  APPROVAL_rust-learning-plan.md  CONSENSUS_rust-learning-plan.md  DESIGN_rust-learning-plan.md  FINAL_rust-learning-plan.md  TASK_rust-learning-plan.md  TODO_rust-learning-plan.md
examples/: README.md
examples/stage1-basics/: README.md
examples/stage1-basics/01-environment-demo/: Cargo.toml  README.md
examples/stage1-basics/02-syntax-demo/: Cargo.toml  README.md
examples/stage1-basics/03-control-flow-demo/: Cargo.toml  README.md
examples/stage1-basics/04-ownership-intro-demo/: Cargo.toml  README.md
examples/stage1-basics/05-comparisons-demo/: Cargo.toml  README.md
examples/stage1-basics/06-structs-enums-demo/: Cargo.toml
examples/stage1-basics/09-generics-traits-demo/: Cargo.toml
examples/stage1-basics/10-advanced-error-handling-demo/: Cargo.toml
examples/stage1-basics/10-advanced-error-handling-demo/src/: main.rs
examples/stage1-basics/collections-demo/: Cargo.toml
examples/stage1-basics/environment-demo/: Cargo.toml
examples/stage1-basics/module-system-demo/: Cargo.toml  README.md
examples/stage1-basics/module-system-demo/examples/: advanced_features.rs  advanced_usage.rs  basic_usage.rs
examples/stage1-basics/module-system-demo/src/: config.rs
examples/stage1-basics/module-system-demo/src/network/: client.rs
examples/stage1-basics/module-system-demo/src/utils/: string_utils.rs
examples/stage1-basics/ownership-intro-demo/: Cargo.toml  README.md
examples/stage1-basics/syntax-demo/: Cargo.toml
examples/stage2-ownership/: README.md
examples/stage2-ownership/01-ownership-concepts/: Cargo.toml  README.md
examples/stage2-ownership/02-borrowing-and-lifetimes/: Cargo.toml  README.md
examples/stage2-ownership/03-structs-and-methods/: Cargo.toml  README.md
examples/stage3-advanced/: README.md
examples/stage3-advanced/01-enums-and-pattern-matching/: Cargo.toml  README.md
examples/stage3-advanced/02-error-handling/: Cargo.toml  README.md
examples/stage3-advanced/03-smart-pointers/: Cargo.toml  README.md
examples/stage4-ecosystem/: README.md
examples/stage4-ecosystem/01-serde-json/: Cargo.toml  README.md
examples/stage4-ecosystem/02-tokio-async/: Cargo.toml  README.md
examples/stage4-ecosystem/03-actix-web/: Cargo.toml  README.md
examples/stage5-projects/: README.md
examples/stage5-projects/01-axum-web-app/: .env.example  Cargo.toml  README.md
examples/stage5-projects/01-axum-web-app/migrations/: 001_create_users_table.sql  002_create_posts_table.sql
examples/stage5-projects/01-axum-web-app/src/: error.rs  main.rs  state.rs
examples/stage5-projects/01-axum-web-app/src/auth/: jwt.rs  middleware.rs
examples/stage5-projects/01-axum-web-app/src/config/: mod.rs
examples/stage5-projects/01-axum-web-app/src/database/: mod.rs
examples/stage5-projects/01-axum-web-app/src/handlers/: health_handlers.rs  mod.rs  post_handlers.rs  user_handlers.rs
examples/stage5-projects/01-axum-web-app/src/models/: post.rs  user.rs
examples/stage5-projects/01-axum-web-app/src/services/: mod.rs  post_service.rs  post_service_old.rs  user_service.rs
examples/stage5-projects/01-axum-web-app/tests/: api_tests.rs
examples/stage5-projects/02-system-programming-cli/: Cargo.toml  README.md
examples/stage5-projects/03-blockchain-demo/: Cargo.toml
exercises/: README.md
exercises/stage1-basics/01-environment/: README.md
exercises/stage2-ownership/: README.md
exercises/stage3-advanced/: README.md
projects/: README.md
tools/: README.md
tools/assessment/: README.md
tools/progress-tracker/: Cargo.toml  dashboard.html  测试用户-progress.json
tools/progress-tracker/benches/: performance_benchmarks.rs  simple_benchmarks.rs
tools/progress-tracker/docs/性能优化/: FINAL_性能优化.md  TODO_性能优化.md
tools/progress-tracker/src/: dashboard.rs  lib.rs  main.rs
tools/progress-tracker/tests/: integration_tests.rs
tools/quality-check/: README.md
(+88 files in other folders)
