[workspace]
members = [
    "examples/stage1-basics/01-environment-demo",
    "examples/stage1-basics/02-syntax-demo",
    "examples/stage1-basics/03-control-flow-demo",
    "examples/stage1-basics/04-ownership-intro-demo",
    "examples/stage1-basics/02-syntax-demo",
    "examples/stage1-basics/03-control-flow-demo",
    "examples/stage1-basics/04-ownership-intro-demo",
    "examples/stage1-basics/05-comparisons-demo",
    "examples/stage1-basics/06-structs-enums-demo",
    "examples/stage1-basics/07-collections-demo",
    "examples/stage1-basics/08-error-handling-demo",
    "examples/stage1-basics/09-generics-traits-demo",
    "examples/stage1-basics/10-advanced-error-handling-demo",
    "examples/stage1-basics/11-module-system-demo",
    "examples/stage1-basics/12-lifetimes-demo",
    "examples/stage2-ownership/01-ownership-concepts",
    "examples/stage2-ownership/02-borrowing-and-lifetimes",
    "examples/stage2-ownership/03-structs-and-methods",
    "examples/stage3-advanced/01-enums-and-pattern-matching",
    "examples/stage3-advanced/02-error-handling",
    "examples/stage3-advanced/03-smart-pointers",
    "examples/stage4-ecosystem/01-serde-json",
    "examples/stage4-ecosystem/02-tokio-async",
    "examples/stage4-ecosystem/03-actix-web",
    "examples/stage1-basics/01-environment-demo", "exercises/stage1-basics/01-environment/exercise-01-environment", "exercises/stage1-basics/02-syntax/exercise-02-syntax", "exercises/stage1-basics/03-control-flow/exercise-03-control-flow", "exercises/stage1-basics/04-ownership-intro/exercise-04-ownership-intro", "tools/assessment/assessment-tool", "exercises/stage2-ownership/ownership-exercise-01", "exercises/stage3-advanced/structs-exercise-01", "exercises/stage3-advanced/enums-exercise-01", "exercises/stage3-advanced/error-handling-exercise-01", "examples/stage5-projects/01-axum-web-app", "examples/stage5-projects/02-system-programming-cli", "examples/stage5-projects/03-blockchain-demo", "exercises/stage5-projects/axum-exercise-01", "exercises/stage5-projects/cli-exercise-01", "exercises/stage5-projects/blockchain-exercise-01", "tools/progress-tracker",
]

resolver = "2"

[workspace.dependencies]
# 通用依赖
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Web开发相关
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# 系统编程相关
libc = "0.2"
nix = "0.27"
memmap2 = "0.9"

# 区块链相关
sha2 = "0.10"
secp256k1 = "0.28"
rand = "0.8"

# 测试和开发工具
criterion = "0.5"
proptest = "1.0"
mockall = "0.12"

# 实用工具
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.0"
once_cell = "1.0"
dashmap = "5.0"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false

[profile.test]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
