[package]
name = "advanced-error-handling-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 异步运行时
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# HTTP 客户端
reqwest = { version = "0.11", features = ["json"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志和追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID 生成
uuid = { version = "1.0", features = ["v4", "serde"] }
