[package]
name = "axum-web-app"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.7.5", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Async runtime
tokio = { version = "1.38.0", features = ["full"] }

# Serialization
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Environment
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# HTTP client (for testing)
reqwest = { version = "0.11", features = ["json"] }

# Async support
futures = "0.3"

[dev-dependencies]
axum-test = "15.0"
tokio-test = "0.4"
